# yoto-library

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/docker/integration/: Dockerfile
.github/workflows/: build-integration-image.yml  ci.yml  publish.yml  pypi.yml
src/yoto_cli/: __main__.py  iterm_colors.py  main.py  progress.py
src/yoto_cli/commands/: billing.py  cover.py  icons.py  import_cmd.py  lyrics.py  misc.py  pull.py  sync.py
src/yoto_lib/: __init__.py  api.py  auth.py  billing.py  config.py  costs.json  costs.py  cover.py  description.py  icon_catalog.py  icon_llm.py  icons.py  itunes.py  lyrics.py  lyrics_scrape.py  lyrics_source_wizard.py  mka.py  playlist.py  printer.py  pull.py  sync.py
src/yoto_lib/billing/: __init__.py  costs.py
src/yoto_lib/covers/: cover.py  itunes.py  printer.py  styles.py
src/yoto_lib/icons/: __init__.py  download.py  generate.py  icon_catalog.py  icon_llm.py  image.py  macos.py  select.py
src/yoto_lib/image_providers/: __init__.py  dalle2_provider.py  flux_provider.py  gemini_provider.py  openai_provider.py  retrodiffusion_provider.py  together_provider.py
src/yoto_lib/lyrics/: __init__.py  lyrics_scrape.py  lyrics_source_wizard.py  scrape_runner.js
src/yoto_lib/providers/: __init__.py  base.py  claude_provider.py  dalle2_provider.py  flux_provider.py  gemini_provider.py  openai_provider.py  retrodiffusion_provider.py  together_provider.py
src/yoto_lib/sources/: __init__.py  youtube.py
src/yoto_lib/track_sources/: __init__.py  youtube.py
src/yoto_lib/yoto/: api.py  auth.py
tests/: conftest.py  test_api.py  test_auth.py  test_billing.py  test_claude_provider.py  test_cli.py  test_costs.py  test_cover.py  test_description.py  test_icon_catalog.py  test_icon_llm.py  test_icons.py  test_image_providers.py  test_integration.py  test_itunes.py  test_lyrics.py  test_lyrics_cli.py  test_lyrics_scrape.py  test_lyrics_source_wizard.py  test_mka.py  test_playlist.py  test_playlist_extras.py  test_printer.py  test_pull.py  test_retrodiffusion_provider.py  test_roundtrip.py  test_sources.py  test_status.py  test_sync.py  test_sync_extras.py
tests/billing/: test_billing.py  test_costs.py  test_costs_extras.py
tests/covers/: test_cover.py  test_cover_extras.py  test_itunes.py  test_printer.py  test_styles.py
tests/icons/: test_icon_catalog.py  test_icon_llm.py  test_icon_llm_extras.py  test_icons.py  test_icons_extras.py
tests/lyrics/: test_lyrics.py  test_lyrics_cli.py  test_lyrics_scrape.py  test_lyrics_source_wizard.py
tests/providers/: test_claude_provider.py  test_claude_provider_extras.py  test_image_providers.py  test_provider_base.py  test_retrodiffusion_provider.py  test_status.py
tests/track_sources/: test_sources.py  test_sources_extras.py
tests/yoto/: test_api.py  test_api_extras.py  test_auth.py
validation/: validate_icon_grid.py  validate_mka_transcode.py
