[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yoto-library"
version = "0.1.0"
description = "Manage Yoto CYO playlists as folders on disk"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "keyring>=25.0",
    "numpy>=1.0",
    "Pillow>=10.0",
    "openai>=1.0",
    "together>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-tmp-files>=0.0.2",
    "ruff>=0.11",
    "ty>=0.0.1a7",
    "iterm2>=2.0",
    "commitizen>=4.0",
    "cz-conventional-gitmoji>=0.7",
    "pre-commit>=4.0",
]
iterm2 = [
    "iterm2>=2.0",
]

[project.scripts]
yoto = "yoto_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/yoto_lib", "src/yoto_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring network access and external tools (yt-dlp)",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "PT",   # pytest style
    "RUF",  # ruff-specific
    "S",    # bandit security
    "FA",   # future annotations
]
# S101: assert is valid for type narrowing
# S603/S607: subprocess calls are intentional (ffmpeg, mkvtoolnix, yt-dlp, osascript, claude CLI)
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S108"]  # fake secrets/paths in test fixtures

[tool.ruff.lint.isort]
known-first-party = ["yoto_lib", "yoto_cli"]

[tool.ty.rules]
# Suppress unused-ignore-comment: ty resolves different imports depending
# on environment (local vs CI), so ignore comments needed in one context
# appear unused in the other.
unused-ignore-comment = "ignore"

[tool.ty.environment]
python-version = "3.10"
root = ["src"]

[tool.commitizen]
name = "cz_gitmoji"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true

